fixed overlay breaking on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ body {
 		transition: all 0.3s ease-out;
 }
 .site-footer form {
-		margin: 2em;
+		margin: 1em;
 }
 .site-footer form label, .site-footer form input, .site-footer form textarea {
 		display: block;
@@ -324,7 +324,7 @@ body {
 .site-footer form input[type=text], .site-footer form textarea {
 		border: 3px solid rgb(174, 137, 128);
 		border-radius: 25px;
-		width: 50vh;
+		width: 30vw;
 		padding: 1em;
 		color: rgb(80, 54, 42);
 }
@@ -911,28 +911,36 @@ form input[type=submit]:active::before {
 		background-color: rgb(255, 245, 228);
 		border: 3px solid rgb(80, 54, 42);
 		border-radius: 0 0 25px 25px;
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		-webkit-box-orient: horizontal;
-		-webkit-box-direction: normal;
-		    -ms-flex-direction: row;
-		        flex-direction: row;
-		-webkit-box-align: center;
-		    -ms-flex-align: center;
-		        align-items: center;
+		display: block;
+		-ms-flex-line-pack: center;
+		    align-content: center;
 }
 .overlay .overlay-description img {
 		border-radius: 25px;
 		width: 30vh;
-}
-.overlay .overlay-description img, .overlay .overlay-description p {
-		margin: 3em;
+		margin: 2em 0 0 7em;
 }
 .overlay .overlay-description p {
+		margin: 3em;
 		text-align: center;
 }
 
+@media (min-width: 768px) {
+		.overlay .overlay-description {
+				background-color: rgb(255, 245, 228);
+				border: 3px solid rgb(80, 54, 42);
+				border-radius: 0 0 25px 25px;
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-align: center;
+				    -ms-flex-align: center;
+				        align-items: center;
+		}
+		.overlay .overlay-description img {
+				margin: 3em;
+		}
+}
 /* HELPERS */
 .hide-visually {
 		position: absolute;
