--- a/scss/partials/_structure.scss
+++ b/scss/partials/_structure.scss
@@ -81,7 +81,7 @@
     }
 
     form {
-        margin: 2em;
+        margin: 1em;
 
         label, input, textarea {
             display: block;
@@ -90,7 +90,7 @@
         input[type="text"], textarea {
             border: 3px solid $color-accent-light;
             border-radius: 25px;
-            width: 50vh;
+            width:30vw;
             padding: 1em;
             color: $color-body-primary-dark;
         }
